Fixed spacing issue with filter panel.

--- a/public/stylesheets/categories.css
+++ b/public/stylesheets/categories.css
@@ -32,6 +32,7 @@
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   display: none;
+  margin-top: 5px;
   padding: 10px;
   width: 735px;
 }
